--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
          * ※ 큰따옴표(")가 데이터에 포함되면 코드가 작동하지 않습니다!
          * ============================================================ */
         const validKoreanJournals = new Set([
-           " International Journal of Thyroidology",
+            " International Journal of Thyroidology",
 " Journal of Naturopathy (한국자연치유학회지)",
 " Korean Journal of Helicobacter Upper Gastrointestinal Research ",
 " 기업과혁신연구",
@@ -3286,7 +3286,9 @@
                                       /제?\s*\d+\s*권/.test(citationInfo.original) ||       // 제26권
                                       /Vol\.?\s*\d+/i.test(citationInfo.original) ||        // Vol.26
                                       /\d+\s*호/.test(citationInfo.original) ||             // 3호
-                                      /[,』」]\s*\d{1,3}[.\s)]*$/.test(citationInfo.original);  // 끝에 권수만 (54.)
+                                      /\d+\s*:\s*\d+/.test(citationInfo.original) ||        // 22:1
+                                      /,\s*\d{1,3}[.\s)]*$/.test(citationInfo.original) ||  // , 15.
+                                      /[』」]\s*\d{1,3}[.\s)]*$/.test(citationInfo.original);  // 』 54.
                 
                 const hasPageInfo = /\d+\s*[-–]\s*\d+/.test(citationInfo.original) ||       // 45-67
                                     /pp\.?\s*\d+/i.test(citationInfo.original);             // pp.45
